--- a/generators/bgq_meson2pt/cvc.input.template
+++ b/generators/bgq_meson2pt/cvc.input.template
@@ -25,7 +25,7 @@ kappa = 0.13729
 BeginQuarkLine
   name = sp
   kappa = 0.13729
-  masses = 0.0245; 0.0252
+  masses = 0.0238; 0.0245; 0.0252; 0.0259
   splitted_propagator = yes
   in_mms_file = no
   n_c = 1
@@ -43,7 +43,7 @@ EndQuarkLine
 BeginQuarkLine
   name = cp
   kappa = 0.13729
-  masses = 0.2940; 0.3058
+  masses = 0.2822; 0.2940; 0.3058; 0.3176
   splitted_propagator = yes
   in_mms_file = no
   n_c = 1
