bgq_meson2pt: correctly print number of processes in job command file

--- a/generators/bgq_meson2pt/inversion.job.template
+++ b/generators/bgq_meson2pt/inversion.job.template
@@ -23,7 +23,7 @@
   echo LOADL_BG_SHAPE = $LOADL_BG_SHAPE
   echo OMP_NUM_THREADS = $OMP_NUM_THREADS
   echo NPN = $NPN 
-  echo NP = $LOADL_BG_SIZE
+  echo NP = $NP
 
   cd ${WDIR}
   
