--- a/generators/bgq_meson2pt/contraction.job.template
+++ b/generators/bgq_meson2pt/contraction.job.template
@@ -24,7 +24,7 @@ contraction )
   echo LOADL_BG_SHAPE = $LOADL_BG_SHAPE
   echo OMP_NUM_THREADS = $OMP_NUM_THREADS
   echo NPN = $NPN 
-  echo NP = $LOADL_BG_SIZE
+  echo NP = $NP
 
   cd ${WDIR}
   
