--- a/generators/bgq_meson2pt/archival.job.template
+++ b/generators/bgq_meson2pt/archival.job.template
@@ -27,8 +27,9 @@ archival )
       echo "${FROM_DIRS[$flavour]} ${TO_DIRS[$flavour]} ${C4NUM}" >> ${WDIR}/missing_files.txt
       RETVAL=1
     else
-      echo "Doing transfer ${TO_DIRS[$flavour]} ${C4NUM}..." 
-      tar -cf ${ARCHDIR}/${TO_DIRS[$flavour]}/source.${C4NUM}.inverted.tar ${WDIR}/${FROM_DIRS[$flavour]}/source.${C4NUM}.??.??.*inverted
+      echo "Doing transfer ${TO_DIRS[$flavour]} ${C4NUM}..."
+      cd ${WDIR}/${FROM_DIRS[$flavour]} 
+      tar -cf ${ARCHDIR}/${TO_DIRS[$flavour]}/source.${C4NUM}.inverted.tar source.${C4NUM}.??.??.*inverted
       if [ $? -ne 0 ]; then
         RETVAL=1
         echo "There was a failure for ${FROM_DIRS[$flavour]} ${TO_DIRS[$flavour]} ${C4NUM}"
