bgq_meson2pt: default notification only on error

--- a/generators/bgq_meson2pt/common.header.template
+++ b/generators/bgq_meson2pt/common.header.template
@@ -3,5 +3,5 @@
 # @ error            = $(job_name).$(jobid).$(stepid).out
 # @ output           = $(job_name).$(jobid).$(stepid).out
 # @ environment      = COPY_ALL;
-# @ notification     = always
+# @ notification     = error
 # @ notify_user      = bartosz.kostrzewa@desy.de
