--- a/generators/bgq_meson2pt/cvc.input.template
+++ b/generators/bgq_meson2pt/cvc.input.template
@@ -3,10 +3,10 @@
 # *******************************************************
 
 debuglevel = 5
-T  = 96
-LX = 48
-LY = 48
-LZ = 48
+T  = 64
+LX = 32
+LY = 32
+LZ = 32
 
 nrtprocs=32
 nrxprocs=8
@@ -20,12 +20,12 @@ n_ape = 5
 alpha_ape = 0.4
 n_jacobi = -1
 kappa_jacobi = 0
-kappa = 0.13729
+kappa = 0.1373
 
 BeginQuarkLine
   name = sp
-  kappa = 0.13729
-  masses = 0.0238; 0.0245; 0.0252; 0.0259
+  kappa = 0.1373
+  masses = 0.0224; 0.0231; 0.0238; 0.0245; 0.0252; 0.0259
   splitted_propagator = yes
   in_mms_file = no
   n_c = 1
@@ -39,29 +39,11 @@ BeginQuarkLine
   first_mass_index=0
   delocalization_type = fuzzing
 EndQuarkLine
-
-BeginQuarkLine
-  name = cp
-  kappa = 0.13729
-  masses = 0.2822; 0.2940; 0.3058; 0.3176
-  splitted_propagator = yes
-  in_mms_file = no
-  n_c = 1
-  n_s = 4
-  no_smearing_combinations = 4
-  source_timeslice = _TS
-  propagator_basename = source
-  propagator_dirname = charm
-  type = up
-  source_type = timeslice
-  first_mass_index=0
-  delocalization_type = fuzzing
-EndQuarkLine
-
+ 
 BeginQuarkLine
   name = sm
-  kappa = 0.13729
-  masses = 0.0238; 0.0245; 0.0252; 0.0259
+  kappa = 0.1373
+  masses = 0.0224; 0.0231; 0.0238; 0.0245; 0.0252; 0.0259
   splitted_propagator = yes
   in_mms_file = no
   n_c = 1
@@ -77,9 +59,27 @@ BeginQuarkLine
 EndQuarkLine
 
 BeginQuarkLine
+  name = cp
+  kappa = 0.1373
+  masses = 0.2586; 0.2704; 0.2822; 0.2940; 0.3058; 0.3176
+  splitted_propagator = yes
+  in_mms_file = no
+  n_c = 1
+  n_s = 4
+  no_smearing_combinations = 4
+  source_timeslice = _TS
+  propagator_basename = source
+  propagator_dirname = charm
+  type = up
+  source_type = timeslice
+  first_mass_index=0
+  delocalization_type = fuzzing
+EndQuarkLine
+
+BeginQuarkLine
   name = cm
-  kappa = 0.13729
-  masses = 0.2822; 0.2940; 0.3058; 0.3176
+  kappa = 0.1373
+  masses = 0.2586; 0.2704; 0.2822; 0.2940; 0.3058; 0.3176
   splitted_propagator = yes
   in_mms_file = no
   n_c = 1
@@ -96,8 +96,8 @@ EndQuarkLine
 
 BeginQuarkLine
   name = u
-  kappa = 0.13729
-  masses = 0.0009
+  kappa = 0.1373
+  masses = 0.006
   splitted_propagator = yes
   in_mms_file = no
   n_c = 1
@@ -114,8 +114,8 @@ EndQuarkLine
 
 BeginQuarkLine
   name = d
-  kappa = 0.13729
-  masses = 0.0009
+  kappa = 0.1373
+  masses = 0.006
   splitted_propagator = yes
   in_mms_file = no
   n_c = 1
@@ -137,14 +137,32 @@ BeginQuarkLinePair
 EndQuarkLinePair
 
 BeginQuarkLinePair
+  name = lc
+  quark_lines = d, cm
+  observables = charged_conn_meson_20
+EndQuarkLinePair
+
+BeginQuarkLinePair
   name = ls
   quark_lines = u, sp
   observables = charged_conn_meson_20
 EndQuarkLinePair
 
 BeginQuarkLinePair
+  name = ls
+  quark_lines = d, sm
+  observables = charged_conn_meson_20
+EndQuarkLinePair
+
+BeginQuarkLinePair
   name = sc
   quark_lines = sp, cp
+  observables = charged_conn_meson_20
+EndQuarkLinePair
+
+BeginQuarkLinePair
+  name = sc
+  quark_lines = sm, cm
   observables = charged_conn_meson_20
 EndQuarkLinePair
 
@@ -163,6 +181,12 @@ EndQuarkLinePair
 BeginQuarkLinePair
   name = llc
   quark_lines = u, u
+  observables = charged_conn_meson_20
+EndQuarkLinePair
+
+BeginQuarkLinePair
+  name = llc
+  quark_lines = d, d
   observables = charged_conn_meson_20
 EndQuarkLinePair
 
