bsm_invert: disable IO checks in L24 eta scan on B85.24 and provide the generated input templates

--- a/generators/bsm_invert/input_templates/L24T48-lcpunode01_etascan.input.template
+++ b/generators/bsm_invert/input_templates/L24T48-lcpunode01_etascan.input.template
@@ -6,7 +6,7 @@ ompnumthreads=32
 
 useevenodd=no
 usesloppyprecision=no
-disableiochecks=no
+disableiochecks=yes
 
 reproducerandomnumbers=no
 ranluxdlevel = 2
