--- a/generators/tbc_pion_props/jscr_templates/slurm.jureca.mg4qcd.jscr.template
+++ b/generators/tbc_pion_props/jscr_templates/slurm.jureca.mg4qcd.jscr.template
@@ -4,17 +4,16 @@
 #SBATCH --mail-user=bartosz.kostrzewa@desy.de
 #SBATCH --nodes=NODES
 #SBATCH --ntasks-per-node=RPN
-#SBATCH --cpus-per-task=12
+#SBATCH --cpus-per-task=1
 #SBATCH --output=outputs/out.JOBNAME.%j
 #SBATCH --error=outputs/err.JOBNAME.%j
 #SBATCH --time=WTIME
-#SBATCH --partition=gpus
-#SBATCH --gres=gpu:4
+#SBATCH --partition=batch
+#SBATCH --hint=nomultithread
 
-module restore nvidia
+module restore default
 
 export OMP_NUM_THREADS=OMPNUMTHREADS                                                                                                                                                
-
 executable=EXECUTABLE
 thetas=( THETAS )
 names=( NAMES )
@@ -47,7 +46,7 @@ for itheta in $( seq 0 $(( ${#thetas[@]} - 1 )) ); do
     logfile=logs/${propagatorfilename}.${conf4}.log
     
     date > ${logfile}
-    QUDA_RESOURCE_PATH=${HOME}/misc/jureca/quda_resources/develop-gcc srun ${executable} -f ${ifile} | tee -a ${logfile}
+    srun ${executable} -f ${ifile} | tee -a ${logfile}
     date >> ${logfile}
   done
 done
