tbc_pion_props: further extensions of the job scripts

--- a/generators/tbc_pion_props/input_templates/invert.input.template
+++ b/generators/tbc_pion_props/input_templates/invert.input.template
@@ -17,7 +17,7 @@ SourceFilename = SRCFILE
 ReadSource = SRCREAD
 SourceType = SRCTYPE
 SourceTimeslice = detect
-NoSamples = 1
+NoSamples = NOSAMPLES
 
 UseRelativePrecision = yes
 UseSloppyPrecision = no
