tbc_pion_probs: add support for QBIG and provide access to the gauge configuration from the tmlqcd input file rather than through a link (note: hasn't been applied to all input templates yet!!)

--- a/generators/tbc_pion_props/input_templates/invert.quda.input.template
+++ b/generators/tbc_pion_props/input_templates/invert.quda.input.template
@@ -16,10 +16,12 @@ thetaz = THETA
 propagatorfilename = PROPFILE
 SourceFilename = SRCFILE
 
+GaugeConfigInputFile = GCONF
+
 ReadSource = SRCREAD
 SourceType = SRCTYPE
 SourceTimeslice = detect
-NoSamples = 1
+NoSamples = NOSAMPLES
 
 UseRelativePrecision = yes
 UseSloppyPrecision = no
@@ -32,7 +34,7 @@ BeginOperator CLOVER
   csw = CSW
   kappa = KAPPA
   2kappamu = MUSIGN2KAPMU
-  propagatorprecision = 32
+  propagatorprecision = 64
   solver = cg
   solverprecision = SPREC
   AddDownPropagator = no
