tbc_pion_props: some adjustments to juerca108 parameters

--- a/generators/tbc_pion_props/input_templates/invert.fgmres.jureca.input.template
+++ b/generators/tbc_pion_props/input_templates/invert.fgmres.jureca.input.template
@@ -14,6 +14,8 @@ thetaz = THETA
 propagatorfilename = PROPFILE
 SourceFilename = SRCFILE
 
+GaugeConfigInputFile = GCONF
+
 # going for block sizes of 4^4
 NoBlocksT = 2
 NoBlocksX = 2
