--- a/generators/tbc_pion_props/input_templates/invert.mg4qcd.jureca.input.template
+++ b/generators/tbc_pion_props/input_templates/invert.mg4qcd.jureca.input.template
@@ -14,6 +14,8 @@ thetaz = THETA
 propagatorfilename = PROPFILE
 SourceFilename = SRCFILE
 
+GaugeConfigInputFile = GCONF
+
 ReadSource = SRCREAD
 SourceType = SRCTYPE
 SourceTimeslice = detect
