--- a/generators/tbc_pion_props/input_templates/invert.fgmres.jureca.input.template
+++ b/generators/tbc_pion_props/input_templates/invert.fgmres.jureca.input.template
@@ -16,7 +16,7 @@ SourceFilename = SRCFILE
 
 GaugeConfigInputFile = GCONF
 
-# going for block sizes of 4^4
+# going for block sizes of 6^3*4
 NoBlocksT = 2
 NoBlocksX = 2
 NoBlocksY = 2
@@ -41,7 +41,7 @@ BeginDeflationInit
   DeflationSubspaceDimension = 24
   NiterMsap = 4
   NcycleMsap = 4
-  KappaMsap = 0.137290
+  KappaMsap = KAPPA
   2KappaMuMsap = 0.00304
 
   NiterMsapSubspace = 4
@@ -52,19 +52,14 @@ BeginDeflationInit
   LittleSolverHighPrecision = 0.01
   LittleSolverMaxIter = 10
   LittleGMRESMParameter = 60
-  KappaSubspace = 0.137290
-#  2KappaMu = 0.00104
-#  2KappaMuSubspace = 0.000247122
+  KappaSubspace = KAPPA
   2KappaMuSubspace = 0.0
-#  Kappa = 0.13710
-  Kappa = 0.137290
+  Kappa = KAPPA
   2KappaMu = 0.00304
-  #2KappaMu = 0.0
 
   LittleEvenOdd = yes
   UseLittleLittleD = no
 
-#  LittleEvenOdd = no
 EndDeflationInit
 
 
