--- a/generators/tbc_pion_props/input_templates/invert.DDalphaAMG.nomultithread.jureca.input.template
+++ b/generators/tbc_pion_props/input_templates/invert.DDalphaAMG.nomultithread.jureca.input.template
@@ -29,21 +29,24 @@ kappa = KAPPA
 2kappamu = 2KAPMU
 csw = CSW
 
-BeginOperator CLOVER
-  MGBlockX = 4
-  MGBlockY = 4
-  MGBlockZ = 4
+BeginDDalphaAMG
   MGBlockT = 4
-  MGSetupIter = 3
+  MGBlockX = 4
+  MGBlockY = 8
+  MGBlockZ = 4
+  MGSetupIter = 5
   MGCoarseSetupIter = 3
-  MGNumberOfVectors = 24
+  MGNumberOfVectors = 36
   MGNumberOfLevels = 3
   MGCoarseMuFactor = 5
+EndDDalphaAMG
+
+BeginOperator CLOVER
   csw = CSW
   kappa = KAPPA
   2kappamu = MUSIGN2KAPMU
   propagatorprecision = 64
-  solver = mg4qcd
+  solver = DDalphaAMG
   solverprecision = SPREC
   AddDownPropagator = no
   maxsolveriterations = 60000
