--- a/generators/tbc_pion_props/jscr_templates/slurm.jureca.hyperthread.fgmres.jscr.template
+++ b/generators/tbc_pion_props/jscr_templates/slurm.jureca.hyperthread.fgmres.jscr.template
@@ -9,6 +9,8 @@
 #SBATCH --error=outputs/err.JOBNAME.%j
 #SBATCH --time=WTIME
 #SBATCH --partition=batch
+#SBATCH --exclusive
+#SBATCH --cpu_bind=none
 
 module restore default
 
@@ -45,7 +47,7 @@ for itheta in $( seq 0 $(( ${#thetas[@]} - 1 )) ); do
     logfile=logs/${propagatorfilename}.${conf4}.log
     
     date > ${logfile}
-    srun ${executable} -f ${ifile} | tee -a ${logfile}
+    srun ${executable} -v -f ${ifile} | tee -a ${logfile}
     date >> ${logfile}
   done
 done
