pion_form_factor: added GPU setup for cA2.30.48, treat theta=0.0000 case correctly everywhere (hopefully)

--- a/generators/pion_form_factor/input_templates/invert.DDalphaAMG.nomultithread.jureca.input.template
+++ b/generators/pion_form_factor/input_templates/invert.DDalphaAMG.nomultithread.jureca.input.template
@@ -41,7 +41,7 @@ BeginDDalphaAMG
   MGNumberOfVectors = 24
   MGNumberOfLevels = 3
   MGCoarseMuFactor = 5
-  MGMixedPrecision = yes
+  MGMixedPrecision = no
   MGUpdateSetupIter = 0
 EndDDalphaAMG
 
