pion_form_factor: updates to many parameter files for various ensembles, updates to generation script, updates to job script templates

--- a/generators/pion_form_factor/jscr_templates/slurm.jureca.DDalphaAMG.jscr.template
+++ b/generators/pion_form_factor/jscr_templates/slurm.jureca.DDalphaAMG.jscr.template
@@ -12,7 +12,9 @@
 #SBATCH --partition=batch
 #SBATCH --hint=nomultithread
 
-module restore default
+module use /usr/local/software/jureca/OtherStages
+module load Stages/2016a
+module load Intel IntelMPI flex
 
 export OMP_NUM_THREADS=OMPNUMTHREADS                                                                                                                                                
 executable=EXECUTABLE
