--- a/generators/pion_form_factor/jscr_templates/cntr.slurm.jureca.jscr.template
+++ b/generators/pion_form_factor/jscr_templates/cntr.slurm.jureca.jscr.template
@@ -9,8 +9,9 @@
 #SBATCH --mail-type=ALL
 #SBATCH --partition=batch
 
-module load Intel/2016.2.181-GCC-4.9.3-2.25  IntelMPI/5.1.3.181
-module load Boost/1.60.0-Python-2.7.11
+module use /usr/local/software/jureca/OtherStages
+module load Stages/2016a
+module load Intel IntelMPI Boost
 
 cntrdir=CNTRDIR
 propdir=PROPDIR
@@ -23,6 +24,7 @@ executable=EXECUTABLE
 j=CONF4
 
 thetas=( THETAS )
+p_offset=P_OFFSET
 
 correlators=( ppcor scalar_ff vector_ff )
 
@@ -37,6 +39,8 @@ fi
 cd ${cntrdir}/
 
 for(( p = 0; p<${#thetas[@]}; p=p+1 )); do
+  pidx=$(( $p_offset + p ))
+
   echo doing config ${j} theta ${thetas[p]}
 
   pp=${thetas[p]}
@@ -52,13 +56,14 @@ for(( p = 0; p<${#thetas[@]}; p=p+1 )); do
   ( srun -n 1 --cpus-per-task=$(( 48 / ${#pp[@]} )) ${executable} -S -L${L} -T${T} -n${j} -s${nosources} \
     --propagator-filename ${propdir}/u_fwdprop_theta_${pp} \
     --gen-propagator-filename ${propdir}/du_seqprop_theta_${pm} \
-    --b-propagator-filename ${propdir}/u_fwdprop_theta_0.0000 -p${p} && date ) | tee -a ${logfile} &
+    --b-propagator-filename ${propdir}/u_fwdprop_theta_0.0000 -p${pidx} && date ) | tee -a ${logfile} &
 
 done
 
 wait ## wait for all contractions to finish and / or crash
 
 for(( p = 0; p<${#thetas[@]}; p=p+1 )); do
+  pidx=$(( $p_offset + p ))
   echo checking correlators for config ${j} theta ${thetas[p]} and deleting props
 
   pp=${thetas[p]}
@@ -67,14 +72,14 @@ for(( p = 0; p<${#thetas[@]}; p=p+1 )); do
     pm=m${pp}
   fi
 
-  logfile=logs/failed_cntr_${j}.${p}_${pp}_ok_if_empty.log
+  logfile=logs/failed_cntr_${j}.${pidx}_${pp}_ok_if_empty.log
 
   # create logfile of zero length rather than "touching"
   echo -n > ${logfile}
 
   fail=0
   for correlator in ${correlators[@]}; do
-    corrfname=${correlator}.$( printf %02d ${p}).${j}
+    corrfname=${correlator}.$( printf %02d ${pidx}).${j}
     if [ -f ${corrfname} ]; then
       # we don't check if the correlator has the right size, we just check if it has non-zero size...
       if [ $( stat -c '%s' ${corrfname} ) -eq 0 ]; then
@@ -90,7 +95,7 @@ for(( p = 0; p<${#thetas[@]}; p=p+1 )); do
   done
   
   # if the contractions seem fine, we delete the propagators, except for the theta=0.0000 forward ones 
-  logfile=logs/prop_delete_${j}.${p}_${pp}.log
+  logfile=logs/prop_delete_${j}.${pidx}_${pp}.log
   echo -n > ${logfile}
   if [ ${fail} -eq 0 ]; then
     echo rm ${propdir}/du_seqprop_theta_${pm}\.${j}\.* | tee -a ${logfile}
